Add and style: modal-overlay

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <header>
     <div class="links">
-      <a href="/">Sobre</a>
-      <a href="./classes.html">Aulas</a>
+      <a href="index.html">Sobre</a>
+      <a href="classes.html">Aulas</a>
     </div>
   </header>
 
