--- a/classes.html
+++ b/classes.html
@@ -12,6 +12,9 @@
       rel="stylesheet"
     />
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -28,102 +31,117 @@
 
     <section class="cards">
 
-      <div class="card">
+      <div class="card" id="UftSB4DaRU4">
         <div class="card__image-container">
           <img
-            src="https://images.unsplash.com/photo-1571149828506-c48f1610314b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+            src="https://img.youtube.com/vi/UftSB4DaRU4/maxresdefault.jpg"
             alt="Aula 01"
           />
         </div>
         <div class="card__content">
-          <p>Aprendendo a aprender | Bela Toledo</p>
+          <p>Manipulação de DOM com JavaScript | Rocketseat</p>
         </div>
         <div class="card__info">
-          <p>12min</p>
+          <p>1h37min</p>
           <p class="card__price">Free</p>
         </div>       
       </div>
 
-      <div class="card">
+      <div class="card" id="JyjH7Py5HqQ">
         <div class="card__image-container">
           <img
-            src="https://images.unsplash.com/photo-1558470570-c9a5a5ade867?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+            src="https://img.youtube.com/vi/JyjH7Py5HqQ/maxresdefault.jpg"
             alt="Aula 02"
           />
         </div>
         <div class="card__content">
-          <p>Excesso de informações | Bela Toledo</p>
+          <p>Vou começar a programar, e agora? | Rocketseat</p>
         </div>
         <div class="card__info">
-          <p>12min</p>
+          <p>28min</p>
           <p class="card__price">Free</p>
         </div>       
       </div>
 
-      <div class="card">
+      <div class="card" id="BvhYm0BOLvA">
         <div class="card__image-container">
           <img
-            src="https://images.unsplash.com/photo-1529244927325-b3ef2247b9fb?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=750&q=80"
+            src="https://img.youtube.com/vi/BvhYm0BOLvA/maxresdefault.jpg"
             alt="Aula 03"
           />
         </div>
         <div class="card__content">
-          <p>Aniversário na programação | Bela Toledo</p>
+          <p>Dark Mode raiz com CSS e JavaScript | Rocketseat</p>
         </div>
         <div class="card__info">
-          <p>12min</p>
+          <p>17min</p>
           <p class="card__price">Free</p>
         </div>       
       </div>
 
-      <div class="card">
+      <div class="card" id="H91DhKPjhPk">
         <div class="card__image-container">
           <img
-            src="https://images.unsplash.com/photo-1555988776-c3f17e5cb789?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80"
+            src="https://img.youtube.com/vi/H91DhKPjhPk/maxresdefault.jpg"
             alt="Aula 04"
           />
         </div>
         <div class="card__content">
-          <p>Como evitar distrações | Bela Toledo</p>
+          <p>Responsividade na prática | Rocketseat</p>
         </div>
         <div class="card__info">
-          <p>12min</p>
+          <p>1h30</p>
           <p class="card__price">Free</p>
         </div>       
       </div>
 
-      <div class="card">
+      <div class="card" id="GTMEuHxh8aQ">
         <div class="card__image-container">
           <img
-            src="https://images.unsplash.com/photo-1587738433410-8f34adcb0c5f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
+            src="https://img.youtube.com/vi/GTMEuHxh8aQ/maxresdefault.jpg"
             alt="Aula 05"
           />
         </div>
         <div class="card__content">
-          <p>Lidando com bloqueioscriativos | Bela Toledo</p>
+          <p>Validação de forms customizada | Rocketseat</p>
         </div>
         <div class="card__info">
-          <p>12min</p>
+          <p>1h01min</p>
           <p class="card__price">Free</p>
         </div>       
       </div>
 
-      <div class="card">
+      <div class="card" id="wHzpWi3FxI8">
         <div class="card__image-container">
           <img
-            src="https://images.unsplash.com/photo-1526566762798-8fac9c07aa98?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=693&q=80"
+            src="https://img.youtube.com/vi/wHzpWi3FxI8/maxresdefault.jpg
+            "
             alt="Aula 06"
           />
         </div>
         <div class="card__content">
-          <p>Descansar é necessário | Bela Toledo</p>
+          <p>Barra de percentual de leitura com JS | Rocketseat</p>
         </div>
         <div class="card__info">
-          <p>12min</p>
+          <p>20min</p>
           <p class="card__price">Free</p>
         </div>       
       </div>
 
     </section>
+
+    <div class="modal-overlay">
+      <div class="modal">
+        <a class="close-modal">
+          <i class="material-icons">close</i>
+        </a>
+
+        <div class="modal-content">
+          <iframe src="" frameborder="0"></iframe>
+        </div>
+      </div>
+    </div>
+
+    <script src="/scripts.js"></script>
   </body>
 </html>
